--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,49 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{aftab2017analyzing,
+  title={Analyzing the Quantum Zeno and anti-Zeno effects using optimal projective measurements},
+  author={Junaid Aftab and Adam Zaman},
+  abstract={Measurements in quantum mechanics can not only effectively freeze the quantum system (the quantum Zeno effect) but also accelerate the time evolution of the system (the quantum anti-Zeno effect). In studies of these effects, a quantum state is prepared repeatedly by projecting the quantum state onto the initial state. In this paper, we repeatedly prepare the initial quantum state in a different manner. Instead of only performing projective measurements, we allow unitary operations to be performed, on a very short time-scale, after each measurement. We can then repeatedly prepare the initial state by performing some projective measurement and then, after each measurement, we perform a suitable unitary operation to end up with the same initial state as before. Our objective is to find the projective measurements that minimize the effective decay rate of the quantum state. We find such optimal measurements and the corresponding decay rates for a variety of system-environment models such as the pure dephasing model and the spin-boson model. We find that there can be considerable differences between this optimized effective decay rate and the usual decay rate obtained by repeatedly projecting onto the initial state. In particular, the Zeno and anti-Zeno regimes can be considerably modified.},
+  abbr={Scientific Reports},
+  journal={Sci Rep},
+  volume={7},
+  pages={11766},
+  year={2017},
+  doi={10.1038/s41598-017-11787-9},
+  html={https://doi.org/10.1038/s41598-017-11787-9},
+  preview={zeno2.png},
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@misc{aftab2024multiproduct,
+      title={Multi-product Hamiltonian simulation with explicit commutator scaling}, 
+      author={Junaid Aftab and Dong An and Konstantina Trivisa},
+      abstract={The well-conditioned multi-product formula (MPF), proposed by [Low, Kliuchnikov, and Wiebe,
+2019], is a simple high-order time-independent Hamiltonian simulation algorithm that implements a linear
+combination of standard product formulas of low order. While the MPF aims to simultaneously exploit
+commutator scaling among Hamiltonians and achieve near-optimal time and precision dependence, its
+lack of a rigorous error bound on the nested commutators renders its practical advantage ambiguous.
+In this work, we conduct a rigorous complexity analysis of the well-conditioned MPF, demonstrating
+explicit commutator scaling and near-optimal time and precision dependence at the same time. Using
+our improved complexity analysis, we present several applications of practical interest where the MPF
+based on a second-order product formula can achieve a polynomial speedup in both system size and
+evolution time, as well as an exponential speedup in precision, compared to second-order and even higherorder product formulas. Compared to post-Trotter methods, the MPF based on a second-order product
+formula can achieve polynomially better scaling in system size, with only poly-logarithmic overhead in
+evolution time and precision.},
+      abbr={arXiv},
+      eprint={2403.08922},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph},
+      arxiv={arXiv:2403.08922},
+      preview={schrodinger.png},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@misc{aftab2024approximating,
+	title={Approximating Korobov Functions via Quantum Circuits}, 
+	author={Junaid Aftab and Haizhao Yang},
+	abstract={Studying quantum circuits through the lens of approximation theory is crucial to upper bound the computational complexity of such circuits to approximate various mathematical functions. In this paper, we construct quantum circuits that can approximate
+$d$-dimensional functions in the Korobov function space using quantum signal processing and linear combinations of unitaries algorithms. We provide error bounds and complexity estimates for these circuits. Since the Korobov space is a subspace of Sobolev spaces, our work establishes a theoretical foundation for implementing a broad class of functions on quantum computers.},
+        abbr={arXiv},
+	eprint={2404.14570},
+	archivePrefix={arXiv},
+	primaryClass={quant-ph},
+	arxiv={arXiv:2404.14570},
+	preview={korobov2.png},
 }
