--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,53 @@
+---
+---
 @article{aftab2017analyzing,
-  title={Analyzing the Quantum Zeno and anti-Zeno effects using optimal projective measurements},
+  title={Analyzing the quantum Zeno and anti-Zeno effects using optimal projective measurements},
   author={Junaid Aftab and Adam Zaman},
   abstract={Measurements in quantum mechanics can not only effectively freeze the quantum system (the quantum Zeno effect) but also accelerate the time evolution of the system (the quantum anti-Zeno effect). In studies of these effects, a quantum state is prepared repeatedly by projecting the quantum state onto the initial state. In this paper, we repeatedly prepare the initial quantum state in a different manner. Instead of only performing projective measurements, we allow unitary operations to be performed, on a very short time-scale, after each measurement. We can then repeatedly prepare the initial state by performing some projective measurement and then, after each measurement, we perform a suitable unitary operation to end up with the same initial state as before. Our objective is to find the projective measurements that minimize the effective decay rate of the quantum state. We find such optimal measurements and the corresponding decay rates for a variety of system-environment models such as the pure dephasing model and the spin-boson model. We find that there can be considerable differences between this optimized effective decay rate and the usual decay rate obtained by repeatedly projecting onto the initial state. In particular, the Zeno and anti-Zeno regimes can be considerably modified.},
   abbr={Scientific Reports},
+  eprint={1702.01609},
+  archivePrefix={arXiv},
+  arxiv={arXiv:1702.01609},
+  year={2017},
   journal={Sci Rep},
   volume={7},
   pages={11766},
-  year={2017},
   doi={10.1038/s41598-017-11787-9},
-  html={https://doi.org/10.1038/s41598-017-11787-9},
-  preview={zeno2.png},
+  preview={zeno.png},
 }
+
+@article{aftab2024multiproduct,
+  title={Multi-product Hamiltonian simulation with explicit commutator scaling},
+  author={Junaid Aftab and Dong An and Konstantina Trivisa},
+  abstract={The well-conditioned multi-product formula (MPF), proposed by [Low, Kliuchnikov, and Wiebe,
+2019], is a simple high-order time-independent Hamiltonian simulation algorithm that implements a linear
+combination of standard product formulas of low order. While the MPF aims to simultaneously exploit
+commutator scaling among Hamiltonians and achieve near-optimal time and precision dependence, its
+lack of a rigorous error bound on the nested commutators renders its practical advantage ambiguous.
+In this work, we conduct a rigorous complexity analysis of the well-conditioned MPF, demonstrating
+explicit commutator scaling and near-optimal time and precision dependence at the same time. Using
+our improved complexity analysis, we present several applications of practical interest where the MPF
+based on a second-order product formula can achieve a polynomial speedup in both system size and
+evolution time, as well as an exponential speedup in precision, compared to second-order and even higherorder product formulas. Compared to post-Trotter methods, the MPF based on a second-order product
+formula can achieve polynomially better scaling in system size, with only poly-logarithmic overhead in
+evolution time and precision.},
+  abbr={arXiv},
+  eprint={2403.08922},
+  archivePrefix={arXiv},
+  arxiv={arXiv:2403.08922},
+  year={2024},
+  preview={MPF.png},
+  }
+  
+  @article{aftab2024approximating,
+  title={Approximating Korobov functions via quantum circuits},
+  author={Junaid Aftab and Haizhao Yang},
+    abstract={Studying quantum circuits through the lens of approximation theory is crucial to upper bound the computational complexity of such circuits to approximate various mathematical functions. In this paper, we construct quantum circuits that can approximate
+$d$-dimensional functions in the Korobov function space using quantum signal processing and linear combinations of unitaries algorithms. We provide error bounds and complexity estimates for these circuits. Since the Korobov space is a subspace of Sobolev spaces, our work establishes a theoretical foundation for implementing a broad class of functions on quantum computers.},
+  abbr={arXiv},
+  eprint={2404.14570},
+  archivePrefix={arXiv},
+  arxiv={arXiv:2404.14570},
+  year={2024},
+  preview={korobov4.png},
+  }
