--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,4 @@
----
----
+
 @article{aftab2017analyzing,
   title={Analyzing the quantum Zeno and anti-Zeno effects using optimal projective measurements},
   author={Junaid Aftab and Adam Zaman},
@@ -9,7 +8,7 @@
   archivePrefix={arXiv},
   arxiv={arXiv:1702.01609},
   year={2017},
-  journal={Sci Rep},
+  journal={Scientic Reports},
   volume={7},
   pages={11766},
   doi={10.1038/s41598-017-11787-9},
@@ -32,10 +31,10 @@ evolution time, as well as an exponential speedup in precision, compared to seco
 formula can achieve polynomially better scaling in system size, with only poly-logarithmic overhead in
 evolution time and precision.},
   abbr={arXiv},
+   journal={Submitted to Communications in Mathematical Physics},
   eprint={2403.08922},
   archivePrefix={arXiv},
   arxiv={arXiv:2403.08922},
-  year={2024},
   preview={MPF.png},
   }
   
@@ -44,10 +43,10 @@ evolution time and precision.},
   author={Junaid Aftab and Haizhao Yang},
     abstract={Studying quantum circuits through the lens of approximation theory is crucial to upper bound the computational complexity of such circuits to approximate various mathematical functions. In this paper, we construct quantum circuits that can approximate
 $d$-dimensional functions in the Korobov function space using quantum signal processing and linear combinations of unitaries algorithms. We provide error bounds and complexity estimates for these circuits. Since the Korobov space is a subspace of Sobolev spaces, our work establishes a theoretical foundation for implementing a broad class of functions on quantum computers.},
-  abbr={arXiv},
+  abbr={Comm. Math Sci.},
   eprint={2404.14570},
+  journal={To appear in Communications in Mathematical Sciences},
   archivePrefix={arXiv},
   arxiv={arXiv:2404.14570},
-  year={2024},
   preview={korobov4.png},
   }
