--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,6 +33,7 @@ evolution time and precision.},
   abbr={arXiv},
    journal={Submitted to Communications in Mathematical Physics},
   eprint={2403.08922},
+  year={2024},
   archivePrefix={arXiv},
   arxiv={arXiv:2403.08922},
   preview={MPF.png},
@@ -45,6 +46,7 @@ evolution time and precision.},
 $d$-dimensional functions in the Korobov function space using quantum signal processing and linear combinations of unitaries algorithms. We provide error bounds and complexity estimates for these circuits. Since the Korobov space is a subspace of Sobolev spaces, our work establishes a theoretical foundation for implementing a broad class of functions on quantum computers.},
   abbr={Comm. Math Sci.},
   eprint={2404.14570},
+  year={2024},
   journal={To appear in Communications in Mathematical Sciences},
   archivePrefix={arXiv},
   arxiv={arXiv:2404.14570},
