--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@ evolution time and precision.},
   year={2024},
   archivePrefix={arXiv},
   arxiv={arXiv:2403.08922},
-  preview={MPF.png},
+  %preview={MPF.png},
   }
   
   @article{aftab2024approximating,
@@ -34,7 +34,7 @@ $d$-dimensional functions in the Korobov function space using quantum signal pro
   journal={To appear in Communications in Mathematical Sciences},
   archivePrefix={arXiv},
   arxiv={arXiv:2404.14570},
-  preview={korobov4.png},
+  %preview={korobov4.png},
   }
   
   @article{aftab2017analyzing,
@@ -50,6 +50,6 @@ $d$-dimensional functions in the Korobov function space using quantum signal pro
   	volume={7},
   	pages={11766},
   	doi={10.1038/s41598-017-11787-9},
-  	preview={zeno.png},
+  	%preview={zeno.png},
   }
  
