--- a/_news/24-12.md
+++ b/_news/24-12.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-A revised version of our paper titled *Approximating Korobov functions via quantum circuits* is now available on arXiv ([arXiv:2404.14570](https://arxiv.org/abs/2404.14570)). Stay tuned for more updates.
+A revised version of our paper titled *Approximating Korobov functions via quantum circuits* is now available on arXiv ([arXiv:2404.14570](https://arxiv.org/abs/2404.14570)). 
