--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,11 +20,13 @@ evolution time and precision.},
   year={2024},
   archivePrefix={arXiv},
   arxiv={arXiv:2403.08922},
+  code={https://github.com/Junaid-Aftab/MPF_Commutator_Scaling},
   %preview={MPF.png},
+  
   }
   
   @article{aftab2024approximating,
-  title={Approximating Korobov functions via quantum circuits},
+  title={Approximating Korobov Functions via Quantum Circuits},
   author={Junaid Aftab and Haizhao Yang},
     abstract={Studying quantum circuits through the lens of approximation theory is crucial to upper bound the computational complexity of such circuits to approximate various mathematical functions. In this paper, we construct quantum circuits that can approximate
 $d$-dimensional functions in the Korobov function space using quantum signal processing and linear combinations of unitaries algorithms. We provide error bounds and complexity estimates for these circuits. Since the Korobov space is a subspace of Sobolev spaces, our work establishes a theoretical foundation for implementing a broad class of functions on quantum computers.},
