--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,7 +56,7 @@ $d$-dimensional functions in the Korobov function space using quantum signal pro
   
   @article{aftab2017analyzing,
   	title={Analyzing the quantum Zeno and anti-Zeno effects using optimal projective measurements},
-  	author={Junaid Aftab and Adam Zaman},
+  	author={Junaid Aftab and Adam Z. Chaudhry},
   	abstract={Measurements in quantum mechanics can not only effectively freeze the quantum system (the quantum Zeno effect) but also accelerate the time evolution of the system (the quantum anti-Zeno effect). In studies of these effects, a quantum state is prepared repeatedly by projecting the quantum state onto the initial state. In this paper, we repeatedly prepare the initial quantum state in a different manner. Instead of only performing projective measurements, we allow unitary operations to be performed, on a very short time-scale, after each measurement. We can then repeatedly prepare the initial state by performing some projective measurement and then, after each measurement, we perform a suitable unitary operation to end up with the same initial state as before. Our objective is to find the projective measurements that minimize the effective decay rate of the quantum state. We find such optimal measurements and the corresponding decay rates for a variety of system-environment models such as the pure dephasing model and the spin-boson model. We find that there can be considerable differences between this optimized effective decay rate and the usual decay rate obtained by repeatedly projecting onto the initial state. In particular, the Zeno and anti-Zeno regimes can be considerably modified.},
   	abbr={Scientific Reports},
   	eprint={1702.01609},
