--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -63,7 +63,7 @@ $d$-dimensional functions in the Korobov function space using quantum signal pro
   	archivePrefix={arXiv},
   	arxiv={arXiv:1702.01609},
   	year={2017},
-  	journal={Scientic Reports},
+  	journal={Scientific Reports},
   	volume={7},
   	pages={11766},
   	doi={10.1038/s41598-017-11787-9},
