Update Korobov functions paper citation details
Replaced the arXiv preprint entry for the Korobov functions paper with its published citation in Communications in Mathematical Sciences, including volume, issue, pages, DOI, and URL.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,18 +11,22 @@
 	},
 }
   
-  @article{aftab2024approximating,
-  title={Approximating Korobov Functions via Quantum Circuits},
-  author={Junaid Aftab and Haizhao Yang},
-  abbr={Comm. Math Sci.},
-  eprint={2404.14570},
-  archivePrefix={arXiv},
-  arxiv={arXiv:2404.14570},
-  year={2025},
-  journal={To appear in Communications in Mathematical Sciences},
-  abstract={Studying quantum circuits through the lens of approximation theory is crucial to upper bound the computational complexity of such circuits to approximate various mathematical functions. In this paper, we construct quantum circuits that can approximate
-  $d$-dimensional functions in the Korobov function space using quantum signal processing and linear combinations of unitaries algorithms. We provide error bounds and complexity estimates for these circuits. Since the Korobov space is a subspace of Sobolev spaces, our work establishes a theoretical foundation for implementing a broad class of functions on quantum computers.},
-  }
+  @article{aftab2025korobov,
+	title={Approximating Korobov functions via quantum circuits},
+	author={Aftab, Junaid and Yang, Haizhao},
+	journal={Communications in Mathematical Sciences},
+	abbr={Comm. Math Sci.},
+	volume={23},
+	number={8},
+	pages={2077--2101},
+	year={2025},
+	doi={10.4310/CMS.250930023153},
+	archivePrefix={arXiv},
+	arxiv={arXiv:2404.14570},
+	url={https://dx.doi.org/10.4310/CMS.250930023153},
+	abstract={Studying quantum circuits through the lens of approximation theory is crucial to upper bound the computational complexity of such circuits to approximate various mathematical functions. In this paper, we construct quantum circuits that can approximate
+	$d$-dimensional functions in the Korobov function space using quantum signal processing and linear combinations of unitaries algorithms. We provide error bounds and complexity estimates for these circuits. Since the Korobov space is a subspace of Sobolev spaces, our work establishes a theoretical foundation for implementing a broad class of functions on quantum computers.},
+}
   
   @article{aftab2024multiproduct,
   	title={Multi-product Hamiltonian simulation with explicit commutator scaling},
